samples/_failures_safe/1761397500_ca1077_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c86f5a1a.c: In function ‘main’:
./samples/SAFE/__tmp_c86f5a1a.c:156:5: error: expected declaration or statement at end of input
  156 |     transpose_matrix(&b, &result);
      |     ^~~~~~~~~~~~~~~~
